src/objects/Staff__c.object
<CustomObject>
    <fields>
        <fullName>App_Permissions__c</fullName>
        <label>App Permissions</label>
        <picklist>
            <picklistValues>
                <fullName>Carpet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management - Front End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management - Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Management - Front End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Management - Admin</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Nae__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EOP-{0}</displayFormat>
        <label>Staff Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>